[package]
name = "termania"
version = "0.1.0"
edition = "2018"

[dependencies]
crossterm = { version = "0.20.0", features = ["event-stream"] }
tokio = { version = "1.9.0", default-features = false, features = ["rt", "rt-multi-thread", "io-std", "time", "macros", "sync"] }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
argh = "0.1.5"
backtrace = "0.3.61"
